# GMTK2022

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: v4_uuids.txt
assets/anis/: RedDemon.ani
assets/dices/: wizard.dice
assets/libresprite/: dice.ase  heart.ase  shield.ase  speed.ase
assets/map/: map.ldtk
assets/map/tileset/: master.ase
assets/troops/: orc.troop  war.troop  warrior.troop
src/: animation.rs  assetloader.rs  buff.rs  camera.rs  dice.rs  enemy.rs  game.rs  layers.rs  lib.rs  main.rs  map.rs  models.rs  player.rs  prefab.rs  troop.rs
src/ui/: ingame.rs  mod.rs  upgrade.rs
src/ui/components/: health_bar.rs  mod.rs  percent_bar.rs  stats_board.rs
